--- a/About.html
+++ b/About.html
@@ -18,11 +18,11 @@
             </a>
             <nav>
                 <ul>                        <!-- UNORDERED LIST -->
-                    <li><a href="Project.html">Backgrounds</a></li>
+                    <li><a href="Index.html">Backgrounds</a></li>
                     <li><a href="Music.html">Music</a></li>
                     <li><a href="Games.html">Games</a></li>
                     <li><a href="About.html" class="selected">About</a></li>
-                    <li><a href="contact.html">Contact</a></li>
+                    <li><a href="Contact.html">Contact</a></li>
                 </ul>                   
             </nav>
         </header>
