--- a/Contact.html
+++ b/Contact.html
@@ -20,7 +20,7 @@
                     <li><a href="Project.html">Backgrounds</a></li>
                     <li><a href="Music.html">Music</a></li>
                     <li><a href="Games.html">Games</a></li>
-                    <li><a href="about.html">About</a></li>
+                    <li><a href="About.html">About</a></li>
                     <li><a href="Contact.html" class="selected">Contact</a></li>
                 </ul>                   
             </nav>
