--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                     <li><a href="Music.html">Music</a></li>
                     <li><a href="Games.html">Games</a></li>
                     <li><a href="About.html">About</a></li>
-                    <li><a href="contact.html">Contact</a></li>
+                    <li><a href="Contact.html">Contact</a></li>
                 </ul>                   
             </nav>
         </header>
