--- a/Music1.html
+++ b/Music1.html
@@ -11,13 +11,13 @@
     </head>
     <body>
         <header> 
-            <a href="Project.html" id="logo">        <!-- ANCHOR TO GO BACK TO HOME PAGE -->
+            <a href="index.html" id="logo">        <!-- ANCHOR TO GO BACK TO HOME PAGE -->
                 <h1>Kevin Dai</h1>                    <!-- HEADLINE -->
                 <h2>Designer</h2>
             </a>
             <nav>
                 <ul>                        <!-- UNORDERED LIST -->
-                    <li><a href="Project.html">Backgrounds</a></li>
+                    <li><a href="index.html">Backgrounds</a></li>
                     <li><a href="Music.html" class="selected">Music</a></li>
                     <li><a href="Games.html">Games</a></li>
                     <li><a href="About.html">About</a></li>
