--- a/Games1.html
+++ b/Games1.html
@@ -37,6 +37,7 @@
                     </ul>
                 </nav2>
             </section>
+        </div>
             
         <div class="wrapper4">
             <span class="gaming">
@@ -115,7 +116,7 @@
             <footer>                            <!-- COMPLEMENT TO HEADER SOCIAL MEDIA ETC. -->
                 <a href="https://www.twitter.com/KevinDai4"><img src="img/twitter-wrap.png" alt="Twitter Logo" class="social-icon"></a>
                 <a href="https://www.facebook.com/kevin.p.dai"><img src="img/facebook-wrap.png" alt="Facebook Logo" class="social-icon"></a>
-                <p>&copy; 2014 Kevin Dai.</p>   <!-- COPYRIGHT -->
+                <p>&copy; 2017 Kevin Dai.</p>   <!-- COPYRIGHT -->
             </footer> 
         </div>
     </body>
