--- a/Music.html
+++ b/Music.html
@@ -52,8 +52,8 @@
             </section>
             
             <nav1>
-            <p align="center"><a href="Music.html">Le Festin</a>
-            <audio autoplay>
+            <p align="center"><a href="Music3.html">Le Festin</a>
+            <audio>
             <source src="music/e%20Festin.mp3" type="audio/ogg">
             <source src="music/Le%20Festin.mp3" type="audio/mpeg">
             Your browser does not support the audio element.
