--- a/Games.html
+++ b/Games.html
@@ -71,8 +71,8 @@
                <nav3>
                 <ul class="GameMusic">
                     <li class="SSBM">
-                    <p><a href="Games.html">SSBM - Fire Emblem</a>
-                    <audio autoplay>
+                    <p><a href="Games3.html">SSBM - Fire Emblem</a>
+                    <audio>
                     <source src="music/Fire%20Emblem.mp3" type="audio/ogg">
                     <source src="music/Fire%20Emblem.mp3" type="audio/mpeg">
                     Your browser does not support the audio element.
