--- a/Games.html
+++ b/Games.html
@@ -11,13 +11,13 @@
     </head>
     <body>
         <header> 
-            <a href="index.html" id="logo">        <!-- ANCHOR TO GO BACK TO HOME PAGE -->
+            <a href="Index.html" id="logo">        <!-- ANCHOR TO GO BACK TO HOME PAGE -->
                 <h1>Kevin Dai</h1>                    <!-- HEADLINE -->
                 <h2>Designer</h2>
             </a>
             <nav>
                 <ul>                        <!-- UNORDERED LIST -->
-                    <li><a href="index.html">Backgrounds</a></li>
+                    <li><a href="Index.html">Backgrounds</a></li>
                     <li><a href="Music.html">Music</a></li>
                     <li><a href="Games.html" class="selected">Games</a></li>
                     <li><a href="About.html">About</a></li>
@@ -65,7 +65,7 @@
             
            <div id="wrapper4">
             <section>
-                <p><b>Music that you might like:</b></p>
+                <p><b>Music that you might like (click again to stop):</b></p>
             </section>
                 
                <nav3>
