--- a/Games1.html
+++ b/Games1.html
@@ -11,13 +11,13 @@
     </head>
     <body>
         <header> 
-            <a href="index.html" id="logo">        <!-- ANCHOR TO GO BACK TO HOME PAGE -->
+            <a href="Index.html" id="logo">        <!-- ANCHOR TO GO BACK TO HOME PAGE -->
                 <h1>Kevin Dai</h1>                    <!-- HEADLINE -->
                 <h2>Designer</h2>
             </a>
             <nav>
                 <ul>                        <!-- UNORDERED LIST -->
-                    <li><a href="index.html">Backgrounds</a></li>
+                    <li><a href="Index.html">Backgrounds</a></li>
                     <li><a href="Music.html">Music</a></li>
                     <li><a href="Games.html" class="selected">Games</a></li>
                     <li><a href="About.html">About</a></li>
@@ -65,7 +65,7 @@
             
            <div id="wrapper4">
             <section>
-                <p><b>Music that you might like:</b></p>
+                <p><b>Music that you might like (click again to stop):</b></p>
             </section>
             <nav3>
                 <ul class="GameMusic">
@@ -80,7 +80,7 @@
                     </li>
 
                     <li class="Gangplank">
-                    <p><a href="Games1.html">Vedrim - Saltwater Scourge</a>
+                    <p><a href="Games.html">Vedrim - Saltwater Scourge</a>
                     <audio autoplay>
                     <source src="music/Vedrim%20-%20Bilgewater%20Suite-%20Saltwater%20Scourge.mp3" type="audio/ogg">
                     <source src="music/Vedrim%20-%20Bilgewater%20Suite-%20Saltwater%20Scourge.mp3" type="audio/mpeg">
