--- a/Games3.html
+++ b/Games3.html
@@ -65,13 +65,13 @@
             
            <div id="wrapper4">
             <section>
-                <p><b>Music that you might like:</b></p>
+                <p><b>Music that you might like (click again to stop):</b></p>
             </section>
                 
                <nav3>
                 <ul class="GameMusic">
                     <li class="SSBM">
-                    <p><a href="Games3.html">SSBM - Fire Emblem</a>
+                    <p><a href="Games.html">SSBM - Fire Emblem</a>
                     <audio autoplay>
                     <source src="music/Fire%20Emblem.mp3" type="audio/ogg">
                     <source src="music/Fire%20Emblem.mp3" type="audio/mpeg">
