--- a/Music1.html
+++ b/Music1.html
@@ -17,7 +17,7 @@
             </a>
             <nav>
                 <ul>                        <!-- UNORDERED LIST -->
-                    <li><a href="index.html">Backgrounds</a></li>
+                    <li><a href="Index.html">Backgrounds</a></li>
                     <li><a href="Music.html" class="selected">Music</a></li>
                     <li><a href="Games.html">Games</a></li>
                     <li><a href="About.html">About</a></li>
@@ -27,7 +27,7 @@
         </header>     
         <div id="wrapper2">
             <section>
-                <p align="center"><b>Music that you might like:</b></p>
+                <p align="center"><b>Music that you might like (click again to stop):</b></p>
                 <ul id="musicgallery">
                     <li>
                         <a href="https://musescore.com/user/3435386/scores/4236721">           
@@ -59,7 +59,7 @@
             </audio>
             </p>
             
-            <p align="center"><a href="Music1.html">DJ Contacreast - Skybeam</a>
+            <p align="center"><a href="Music.html">DJ Contacreast - Skybeam</a>
             <audio autoplay>
             <source src="music/DJ%20Contacreast%20-%20Skybeam.mp3" type="audio/ogg">
             <source src="music/DJ%20Contacreast%20-%20Skybeam.mp3" type="audio/mpeg">
