--- a/Music2.html
+++ b/Music2.html
@@ -11,13 +11,13 @@
     </head>
     <body>
         <header> 
-            <a href="index.html" id="logo">        <!-- ANCHOR TO GO BACK TO HOME PAGE -->
+            <a href="Index..html" id="logo">        <!-- ANCHOR TO GO BACK TO HOME PAGE -->
                 <h1>Kevin Dai</h1>                    <!-- HEADLINE -->
                 <h2>Designer</h2>
             </a>
             <nav>
                 <ul>                        <!-- UNORDERED LIST -->
-                    <li><a href="index.html">Backgrounds</a></li>
+                    <li><a href="Index.html">Backgrounds</a></li>
                     <li><a href="Music.html" class="selected">Music</a></li>
                     <li><a href="Games.html">Games</a></li>
                     <li><a href="About.html">About</a></li>
@@ -28,7 +28,7 @@
         
         <div id="wrapper2">
             <section>
-                <p align="center"><b>Music that you might like:</b></p>
+                <p align="center"><b>Music that you might like (click again to stop):</b></p>
                 <ul id="musicgallery">
                     <li>
                         <a href="https://musescore.com/user/3435386/scores/4236721">           
@@ -68,7 +68,7 @@
             </audio>
             </p>
             
-            <p align="center"><a href="Music2.html">Pokemon - Search for the Girl</a>
+            <p align="center"><a href="Music.html">Pokemon - Search for the Girl</a>
             <audio autoplay>
             <source src="music/Pok%C3%A9mon%20-%20Search%20For%20The%20Girl.mp3" type="audio/ogg">
             <source src="music/Pok%C3%A9mon%20-%20Search%20For%20The%20Girl.mp3" type="audio/mpeg">
