--- a/Music3.html
+++ b/Music3.html
@@ -28,7 +28,7 @@
         
         <div id="wrapper2">
             <section>
-                <p align="center"><b>Music that you might like:</b></p>
+                <p align="center"><b>Music that you might like (click again to stop):</b></p>
                 <ul id="musicgallery">
                     <li>
                         <a href="https://musescore.com/user/3435386/scores/4236721">           
@@ -52,7 +52,7 @@
             </section>
             
             <nav1>
-            <p align="center"><a href="Music3.html">Le Festin</a>
+            <p align="center"><a href="Music.html">Le Festin</a>
             <audio autoplay>
             <source src="music/e%20Festin.mp3" type="audio/ogg">
             <source src="music/Le%20Festin.mp3" type="audio/mpeg">
