--- a/Music1.html
+++ b/Music1.html
@@ -17,7 +17,7 @@
             </a>
             <nav>
                 <ul>                        <!-- UNORDERED LIST -->
-                    <li><a href="Index.html">Backgrounds</a></li>
+                    <li><a href="index.html">Backgrounds</a></li>
                     <li><a href="Music.html" class="selected">Music</a></li>
                     <li><a href="Games.html">Games</a></li>
                     <li><a href="About.html">About</a></li>
