--- a/Music2.html
+++ b/Music2.html
@@ -68,7 +68,7 @@
             </audio>
             </p>
             
-            <p align="center"><a href="Music.html">Pokemon - Search for the Girl</a>
+            <p align="center"><a href="Music.html">Pokemon - Search for the Girl (playing)</a>
             <audio autoplay>
             <source src="music/Pok%C3%A9mon%20-%20Search%20For%20The%20Girl.mp3" type="audio/ogg">
             <source src="music/Pok%C3%A9mon%20-%20Search%20For%20The%20Girl.mp3" type="audio/mpeg">
