--- a/Music3.html
+++ b/Music3.html
@@ -52,7 +52,7 @@
             </section>
             
             <nav1>
-            <p align="center"><a href="Music.html">Le Festin</a>
+            <p align="center"><a href="Music.html">Le Festin (playing)</a>
             <audio autoplay>
             <source src="music/e%20Festin.mp3" type="audio/ogg">
             <source src="music/Le%20Festin.mp3" type="audio/mpeg">
