--- a/Games1.html
+++ b/Games1.html
@@ -80,7 +80,7 @@
                     </li>
 
                     <li class="Gangplank">
-                    <p><a href="Games.html">Vedrim - Saltwater Scourge</a>
+                    <p><a href="Games.html">Vedrim - Saltwater Scourge (playing)</a>
                     <audio autoplay>
                     <source src="music/Vedrim%20-%20Bilgewater%20Suite-%20Saltwater%20Scourge.mp3" type="audio/ogg">
                     <source src="music/Vedrim%20-%20Bilgewater%20Suite-%20Saltwater%20Scourge.mp3" type="audio/mpeg">
