--- a/Games2.html
+++ b/Games2.html
@@ -90,7 +90,7 @@
                     </li>
 
                     <li class="ChronoCross">
-                    <p><a href="Games.html">Chrono Cross - Dream of the Shore Near Another World</a>
+                    <p><a href="Games.html">Chrono Cross - Dream of the Shore Near Another World (playing)</a>
                     <audio autoplay>
                     <source src="music/Chrono%20Cross%20OST%20-%20Dreams%20of%20the%20Shore%20Near%20Another%20World.mp3" type="audio/ogg">
                     <source src="music/Chrono%20Cross%20OST%20-%20Dreams%20of%20the%20Shore%20Near%20Another%20World.mp3" type="audio/mpeg">
