--- a/Games3.html
+++ b/Games3.html
@@ -71,7 +71,7 @@
                <nav3>
                 <ul class="GameMusic">
                     <li class="SSBM">
-                    <p><a href="Games.html">SSBM - Fire Emblem</a>
+                    <p><a href="Games.html">SSBM - Fire Emblem (playing)</a>
                     <audio autoplay>
                     <source src="music/Fire%20Emblem.mp3" type="audio/ogg">
                     <source src="music/Fire%20Emblem.mp3" type="audio/mpeg">
