--- a/Games1.html
+++ b/Games1.html
@@ -106,7 +106,7 @@
                 <p><b>Games that I made:</b></p>
                 <nav2>
                     <ul class="GamesCreated">
-                        <li class="ScarletDoor"><a href="https://lockster167.github.io/Scarlet-Door/">Scarlet Door (Need Twine)</a></li>
+                        <li class="ScarletDoor"><a href="https://lockster167.github.io/Scarlet-Door/">Scarlet Door</a></li>
                         <li class="MemoryPuzzle"><a href="Games/CompleteMemoryPuzzle.py" download>Memory Puzzle</a></li>
                     </ul>
                 </nav2>
