--- a/About.html
+++ b/About.html
@@ -40,6 +40,10 @@
                 <img class="mySlides w3-animate-fading" alt="wow" src="img/BerlinTower.jpg">
                 <img class="mySlides w3-animate-fading" alt="wow" src="img/BerlinWall.jpg">
                 <img class="mySlides w3-animate-fading" alt="wow" src="img/Venice.jpg">
+                 <img class="mySlides w3-animate-fading" alt="wow" src="img/Austria.jpg">
+                 <img class="mySlides w3-animate-fading" alt="wow" src="img/Amsterdam.jpg">
+                 <img class="mySlides w3-animate-fading" alt="wow" src="img/Barcelona.jpg">
+                 <img class="mySlides w3-animate-fading" alt="wow" src="img/Florence.jpg">
             </span>
             </div>
             
