--- a/Contact.html
+++ b/Contact.html
@@ -17,6 +17,7 @@
             </a>
             <nav>
                 <ul>                        <!-- UNORDERED LIST -->
+                    <li><a href="Blog.html">Blog</a></li>
                     <li><a href="index.html">Backgrounds</a></li>
                     <li><a href="Music.html">Music</a></li>
                     <li><a href="Games.html">Games</a></li>
