--- a/Blog.html
+++ b/Blog.html
@@ -100,7 +100,7 @@
         </div>
 
         <div style="color: #777;background-color:white;text-align:center;padding:50px 80px;text-align: justify;">
-          <h3 style="text-align:center;">Parallax Demo</h3>
+          <h3 style="text-align:center;">Parallax Test</h3>
           <p>Blog.</p>
         </div>
 
@@ -112,7 +112,7 @@
 
         <div style="position:relative;">
           <div style="color:#ddd;background-color:#282E34;text-align:center;padding:50px 80px;text-align: justify;">
-            <p>Scroll up and down to really get the feeling of how Parallax Scrolling works.</p>
+            <p>1</p>
           </div>
         </div>
 
@@ -124,7 +124,7 @@
 
         <div style="position:relative;">
           <div style="color:#ddd;background-color:#282E34;text-align:center;padding:50px 80px;text-align: justify;">
-            <p>Scroll up and down to really get the feeling of how Parallax Scrolling works.</p>
+            <p>2</p>
           </div>
         </div>
 
