--- a/Blog.html
+++ b/Blog.html
@@ -28,6 +28,7 @@
         .bgimg-1 {
           background-image: url("img/Amsterdam.jpg");
           min-height: 100%;
+          z-index=-1;
         }
 
         .bgimg-2 {
