--- a/Blog.html
+++ b/Blog.html
@@ -28,7 +28,7 @@
         .bgimg-1 {
           background-image: url("img/Amsterdam.jpg");
           min-height: 100%;
-          z-index=-1;
+            z-index: -1;
         }
 
         .bgimg-2 {
@@ -101,7 +101,7 @@
         </div>
 
         <div style="color: #777;background-color:white;text-align:center;padding:50px 80px;text-align: justify;">
-          <h3 style="text-align:center;">Parallax Test</h3>
+          <h3 style="text-align:center;">Parallax Demo</h3>
           <p>Blog.</p>
         </div>
 
@@ -113,7 +113,7 @@
 
         <div style="position:relative;">
           <div style="color:#ddd;background-color:#282E34;text-align:center;padding:50px 80px;text-align: justify;">
-            <p>1</p>
+            <p>Scroll up and down to really get the feeling of how Parallax Scrolling works.</p>
           </div>
         </div>
 
@@ -125,7 +125,7 @@
 
         <div style="position:relative;">
           <div style="color:#ddd;background-color:#282E34;text-align:center;padding:50px 80px;text-align: justify;">
-            <p>2</p>
+            <p>Scroll up and down to really get the feeling of how Parallax Scrolling works.</p>
           </div>
         </div>
 
