--- a/Blog.html
+++ b/Blog.html
@@ -96,7 +96,7 @@
         
         <div class="bgimg-1">
           <div class="caption">
-            <span class="border">SCROLL DOWN</span>
+            <span class="border">Kevin Dai's Blog</span>
           </div>
         </div>
 
