--- a/index.html
+++ b/index.html
@@ -84,8 +84,7 @@
             </a>
             <nav>
                 <ul>                        <!-- UNORDERED LIST -->
-                    <li><a href="Blog.html" class="selected">Blog</a></li>
-                    <li><a href="index.html">Backgrounds</a></li>
+                    <li><a href="index.html" class="selected">Blog</a></li>
                     <li><a href="Music.html">Music</a></li>
                     <li><a href="Games.html">Games</a></li>
                     <li><a href="About.html">About</a></li>
