--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
           top: 50%;
           width: 100%;
           text-align: center;
-          color: #000;
+          color: #fff;
         }
 
         .caption span.border {
@@ -62,7 +62,7 @@
           letter-spacing: 5px;
           text-transform: uppercase;
           font: 20px "Lato", sans-serif;
-          color: #111;
+          color: #fff;
         }
 
         /* Turn off parallax scrolling for tablets and phones */
