--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
 
         <div class="bgimg-2">
           <div class="caption">
-            <span class="border" style="background-color:transparent;font-size:25px;color: #f7f7f7;">LESS HEIGHT</span>
+            <span class="border" style="background-color:transparent;font-size:25px;color: #000;">LESS HEIGHT</span>
           </div>
         </div>
 
@@ -118,7 +118,7 @@
 
         <div class="bgimg-3">
           <div class="caption">
-            <span class="border" style="background-color:transparent;font-size:25px;color: #f7f7f7;">SCROLL UP</span>
+            <span class="border" style="background-color:transparent;font-size:25px;color: #000;">SCROLL UP</span>
           </div>
         </div>
 
