--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 
         .caption span.border {
           background-color: #111;
-          color: #fff;
+          color: #fff;             
           padding: 18px;
           font-size: 25px;
           letter-spacing: 10px;
@@ -62,7 +62,7 @@
           letter-spacing: 5px;
           text-transform: uppercase;
           font: 20px "Lato", sans-serif;
-          color: #fff;
+          color: #fff;                  <!-- White Text -->
         }
 
         /* Turn off parallax scrolling for tablets and phones */
@@ -109,6 +109,7 @@
             <span class="border" style="background-color:transparent;font-size:25px;color: #000;">LESS HEIGHT</span>
           </div>
         </div>
+        <!-- Black Captions -->
 
         <div style="position:relative;">
           <div style="color:#ddd;background-color:#282E34;text-align:center;padding:50px 80px;text-align: justify;">
