--- a/index.html
+++ b/index.html
@@ -15,7 +15,6 @@
           font: 400 15px/1.8 "Lato", sans-serif;
           color: #777;
         }
-
         .bgimg-1, .bgimg-2, .bgimg-3 {
           position: relative;
           opacity: 0.65;
@@ -23,24 +22,20 @@
           background-position: center;
           background-repeat: no-repeat;
           background-size: cover;
-
         }
         .bgimg-1 {
           background-image: url("img/Amsterdam.jpg");
           min-height: 100%;
             z-index: -1;
         }
-
         .bgimg-2 {
           background-image: url("img/Austria.jpg");
           min-height: 400px;
         }
-
         .bgimg-3 {
           background-image: url("img/Barcelona.jpg");
           min-height: 400px;
         }
-
         .caption {
           position: absolute;
           left: 0;
@@ -49,29 +44,25 @@
           text-align: center;
           color: #fff;
         }
-
         .caption span.border {
           background-color: #111;
-          color: #fff;             
+          color: #fff;
           padding: 18px;
           font-size: 25px;
           letter-spacing: 10px;
         }
-
         h3 {
           letter-spacing: 5px;
           text-transform: uppercase;
           font: 20px "Lato", sans-serif;
-          color: #fff;                  <!-- White Text -->
+          color: #fff;
         }
-
         /* Turn off parallax scrolling for tablets and phones */
         @media only screen and (max-device-width: 1024px) {
             .bgimg-1, .bgimg-2, .bgimg-3 {
                 background-attachment: scroll;
             }
         }
-
         </style>
     </head>
     
@@ -109,13 +100,13 @@
             <span class="border" style="background-color:transparent;font-size:25px;color: #000;">LESS HEIGHT</span>
           </div>
         </div>
-        <!-- Black Captions -->
 
         <div style="position:relative;">
           <div style="color:#ddd;background-color:#282E34;text-align:center;padding:50px 80px;text-align: justify;">
             <p>1</p>
           </div>
         </div>
+        <!-- #DDD DETERMINES COLOR OF TEXT -->
 
         <div class="bgimg-3">
           <div class="caption">
@@ -128,6 +119,7 @@
             <p>2</p>
           </div>
         </div>
+        <!-- #DDD DETERMINES COLOR OF TEXT -->
 
         <div class="bgimg-1">
           <div class="caption">
