--- a/index.html
+++ b/index.html
@@ -102,12 +102,11 @@
         </div>
 
         <div style="position:relative;">
-          <div style="color:#ddd;background-color:#282E34;text-align:center;padding:50px 80px;text-align: justify;">
+          <div style="color:#white;background-color:#black;text-align:center;padding:50px 80px;text-align: justify;">
             <p>1</p>
           </div>
         </div>
-        <!-- #DDD DETERMINES COLOR OF TEXT -->
-
+        
         <div class="bgimg-3">
           <div class="caption">
             <span class="border" style="background-color:transparent;font-size:25px;color: #000;">SCROLL UP</span>
@@ -115,11 +114,10 @@
         </div>
 
         <div style="position:relative;">
-          <div style="color:#ddd;background-color:#282E34;text-align:center;padding:50px 80px;text-align: justify;">
+          <div style="color:#white;background-color:#black;text-align:center;padding:50px 80px;text-align: justify;">
             <p>2</p>
           </div>
         </div>
-        <!-- #DDD DETERMINES COLOR OF TEXT -->
 
         <div class="bgimg-1">
           <div class="caption">
