--- a/index.html
+++ b/index.html
@@ -92,7 +92,9 @@
 
         <div style="color: #777;background-color:white;text-align:center;padding:50px 80px;text-align: justify;">
           <h3 style="text-align:center;">Parallax Demo</h3>
-          <p>Blog.</p>
+          <p>League of Legends Esports entering 2017.</p>
+          <br>
+          <p>Mention beginning of Justin.tv--> Twitch.tv, Mention $Prize Pool$</p>
         </div>
 
         <div class="bgimg-2">
