--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
           </div>
         </div>
 
-        <div style="color: #777;background-color:white;text-align:center;padding:50px 80px;text-align: justify;">
+        <div style="color:white; background-color:black; text-align:center; padding:50px 80px; text-align: justify;">
           <h3 style="text-align:center;">Parallax Demo</h3>
           <p>League of Legends Esports entering 2017.</p>
           <br>
@@ -99,24 +99,24 @@
 
         <div class="bgimg-2">
           <div class="caption">
-            <span class="border" style="background-color:transparent;font-size:25px;color: #000;">LESS HEIGHT</span>
+            <span class="border" style="background-color:transparent; font-size:25px; color: #000;">LESS HEIGHT</span>
           </div>
         </div>
 
         <div style="position:relative;">
-          <div style="color:#white;background-color:#black;text-align:center;padding:50px 80px;text-align: justify;">
+          <div style="color:#black; background-color:#white; text-align:center; padding:50px 80px; text-align: justify;">
             <p>1</p>
           </div>
         </div>
         
         <div class="bgimg-3">
           <div class="caption">
-            <span class="border" style="background-color:transparent;font-size:25px;color: #000;">SCROLL UP</span>
+            <span class="border" style="background-color:transparent; font-size:25px;color: #000;">SCROLL UP</span>
           </div>
         </div>
 
         <div style="position:relative;">
-          <div style="color:#white;background-color:#black;text-align:center;padding:50px 80px;text-align: justify;">
+          <div style="color:#black; background-color:#white; text-align:center; padding:50px 80px; text-align: justify;">
             <p>2</p>
           </div>
         </div>
