--- a/index.html
+++ b/index.html
@@ -92,9 +92,7 @@
 
         <div style="color:white; background-color:black; text-align:center; padding:50px 80px; text-align: justify;">
           <h3 style="text-align:center;">Parallax Demo</h3>
-          <p>League of Legends Esports entering 2017.</p>
-          <br>
-          <p>Mention beginning of Justin.tv--> Twitch.tv, Mention $Prize Pool$</p>
+            <p style="color: #white;>League of Legends Esports entering 2017.</p>
         </div>
 
         <div class="bgimg-2">
@@ -104,7 +102,7 @@
         </div>
 
         <div style="position:relative;">
-          <div style="color:#black; background-color:#white; text-align:center; padding:50px 80px; text-align: justify;">
+          <div style="color:#white; background-color:#black; text-align:center; padding:50px 80px; text-align: justify;">
             <p>1</p>
           </div>
         </div>
@@ -116,7 +114,7 @@
         </div>
 
         <div style="position:relative;">
-          <div style="color:#black; background-color:#white; text-align:center; padding:50px 80px; text-align: justify;">
+          <div style="color:#white; background-color:#black; text-align:center; padding:50px 80px; text-align: justify;">
             <p>2</p>
           </div>
         </div>
