--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
 
         <div style="color:white; background-color:black; text-align:center; padding:50px 80px; text-align: justify;">
           <h3 style="text-align:center;">Parallax Demo</h3>
-            <p style="color: #white;>League of Legends Esports entering 2017.</p>
+           <p style="color: #white;">League of Legends Esports entering 2017.</p>
         </div>
 
         <div class="bgimg-2">
