--- a/index.html
+++ b/index.html
@@ -57,6 +57,12 @@
           font: 20px "Lato", sans-serif;
           color: #fff;
         }
+       p {
+          letter-spacing: 5px;
+          text-transform: uppercase;
+          font: 20px "Lato", sans-serif;
+          color: #000;
+        }
         /* Turn off parallax scrolling for tablets and phones */
         @media only screen and (max-device-width: 1024px) {
             .bgimg-1, .bgimg-2, .bgimg-3 {
