--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
             z-index: -1;
         }
         .bgimg-2 {
-          background-image: url("img/Austria.jpg");
+          background-image: url("img/MSGLeague.jpg");
           min-height: 400px;
         }
         .bgimg-3 {
@@ -97,13 +97,12 @@
         </div>
 
         <div style="color:white; background-color:black; text-align:center; padding:50px 80px; text-align: justify;">
-          <h3 style="text-align:center;">Parallax Demo</h3>
-           <p style="color: #white;">League of Legends Esports entering 2017.</p>
+            <h3 style="text-align:center;">An Introduction to Who I Am</h3>
         </div>
 
         <div class="bgimg-2">
           <div class="caption">
-            <span class="border" style="background-color:transparent; font-size:25px; color: #000;">LESS HEIGHT</span>
+            <span class="border" style="background-color:transparent; font-size:25px; color: #000;">The Growth of Esports</span>
           </div>
         </div>
 
@@ -139,6 +138,5 @@
                 <p>&copy; 2017 Kevin Dai.</p>   <!-- COPYRIGHT -->
             </footer>   
         </div> 
-        
     </body>
 </html>
