--- a/index.html
+++ b/index.html
@@ -97,18 +97,18 @@
         </div>
 
         <div style="color:white; background-color:black; text-align:center; padding:50px 80px; text-align: justify;">
-            <h3 style="text-align:center;">An Introduction to Who I Am</h3>
+            <h3 style="text-align:center;"><a href="About.html">An Introduction to Who I Am</a></h3>
         </div>
 
         <div class="bgimg-2">
           <div class="caption">
-            <span class="border" style="background-color:transparent; font-size:25px; color: #000;">The Growth of Esports</span>
+            <span class="border" style="font-size:25px; color: #000;">The Growth of Esports</span>
           </div>
         </div>
         
         <div class="bgimg-3">
           <div class="caption">
-            <span class="border" style="background-color:transparent; font-size:25px;color: #000;">SCROLL UP</span>
+            <span class="border" style="background-color:transparent; font-size:25px;color: #000;">Traveling</span>
           </div>
         </div>
 
