--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
           top: 50%;
           width: 100%;
           text-align: center;
-          color: #fff;
+          color: #black;
         }
         .caption span.border {
           background-color: #111;
@@ -56,12 +56,6 @@
           text-transform: uppercase;
           font: 20px "Lato", sans-serif;
           color: #fff;
-        }
-       p {
-          letter-spacing: 5px;
-          text-transform: uppercase;
-          font: 20px "Lato", sans-serif;
-          color: #000;
         }
         /* Turn off parallax scrolling for tablets and phones */
         @media only screen and (max-device-width: 1024px) {
@@ -102,7 +96,7 @@
 
         <div class="bgimg-2">
           <div class="caption">
-            <span class="border" style="font-size:25px; color: #000;">The Growth of Esports</span>
+            <span class="border" style="background-color:transparent; font-size:25px; color: #000;">The Growth of Esports</span>
           </div>
         </div>
         
