--- a/index.html
+++ b/index.html
@@ -91,7 +91,9 @@
         </div>
 
         <div style="color:white; background-color:black; text-align:center; padding:50px 80px; text-align: justify;">
-            <h3 style="text-align:center;"><a href="About.html">An Introduction to Who I Am</a></h3>
+                <nav3>
+                    <h3 style="text-align:center;"><a href="About.html">An Introduction to Who I Am</a></h3>
+                </nav3>
         </div>
 
         <div class="bgimg-2">
