--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
         
         <div class="bgimg-1">
           <div class="caption">
-            <span class="border" style="background-color:transparent;>Kevin Dai's Blog</span>
+            <span class="border" style="background-color:transparent;">Kevin Dai's Blog</span>
           </div>
         </div>
 
