--- a/index.html
+++ b/index.html
@@ -86,17 +86,17 @@
         
         <div class="bgimg-1">
           <div class="caption">
-            <span class="border">Blogger</span>
+            <span class="border">An Introduction to Who I Am</span>
           </div>
         </div>
 
         <div style="color:white; background-color:black; text-align:center; padding:50px 80px; text-align: justify;">
-          <h3 style="text-align:center;"><a href="About.html">An Introduction to Who I Am</a></h3>
+          <h3 style="text-align:center;"><a href="About.html"></a></h3>
         </div>
 
         <div class="bgimg-2">
           <div class="caption">
-            <span class="border">The Growth of Esports</span>
+            <span class="border">Blogs</span>
           </div>
         </div>
         
@@ -118,7 +118,7 @@
 
         <div class="bgimg-1">
           <div class="caption">
-            <span class="border">COOL!</span>
+            <span class="border">Cool Coding Stuff</span>
           </div>
         </div>
 
