--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
         
         <div class="bgimg-1">
           <div class="caption">
-            <span class="border">An Introduction to Who I Am</span>
+              <span class="border"><a href="About.html">An Introduction to Who I Am</a></span>
           </div>
         </div>
 
